Fixed issues with Team page in Firefox
images still not showing up in IE for some reason

--- a/assets/style.css
+++ b/assets/style.css
@@ -243,7 +243,7 @@ table.vtop th {
     
 }
 .o-peeps{
-    height: 39.4%;
+    height: 90%;
     width: 35.2%;
     overflow: hidden;
     background-position: center;
@@ -259,7 +259,7 @@ table.vtop th {
 }
 
 .o-sandLink {
-    height: 15%;
+    height: 12%;
     position: absolute;
     right: 0%;
     top: 3%;
